syntax = "proto3";

package cr8r.core;

message PExperimentEvent {
    message PPing {
        //
    }

    message PSystemMsg {
        string msg = 1;
    }

    message PUserMsg {
        string msg = 1;
    }

    message PProcessOutput {
        string line = 1;
    }

    message PExperimentStarted {
        //
    }

    message PExperimentSucceeded {
        //
    }

    message PExperimentFailed {
        string cause = 1;
    }

    message PStepSucceeded {
        uint32 id = 1;
    }

    message PStepFailed {
        uint32 id = 1;
        string cause = 2;
    }

    string created_at = 1;

    oneof op {
        PPing ping = 100;

        PSystemMsg system_msg = 200;
        PUserMsg user_msg = 201;
        PProcessOutput process_output = 202;

        PExperimentStarted experiment_started = 300;
        PExperimentSucceeded experiment_succeeded = 301;
        PExperimentFailed experiment_failed = 302;

        PStepSucceeded step_succeeded = 400;
        PStepFailed step_failed = 401;
    }
}