syntax = "proto3";

package cr8r.models;

message PEvent {
    message PPing {
        //
    }

    message PSystemMsg {
        string msg = 1;
    }

    message PCustomMsg {
        string msg = 1;
    }

    message PProcessMsg {
        string msg = 1;
    }

    message PExperimentStarted {
        //
    }

    message PExperimentCompleted {
        //
    }

    message PJobStarted {
        uint32 id = 1;
    }

    message PJobCompleted {
        uint32 id = 1;
        string failure_cause = 2;
    }

    string at = 1;

    oneof ty {
        PPing ping = 100;

        PSystemMsg system_msg = 200;
        PCustomMsg custom_msg = 201;
        PProcessMsg process_msg = 202;

        PExperimentStarted experiment_started = 300;
        PExperimentCompleted experiment_completed = 301;

        PJobStarted job_started = 400;
        PJobCompleted job_completed = 401;
    }
}